# MedicalRepOCR

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: build-run.yml
